Fixed cursor visibility isssue

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 * {
-  cursor: none !important;
+  cursor: default;
 }
 
 .oswald-2 {
